--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,3 +7,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.clip-triangle {
+  clip-path: polygon(100% 0, 100% 100%, 0 0);
+}
+
+.truncate {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
